Updated Background Start Menu
MainWindow still not finished

--- a/BTM_Qt/res_file.qrc
+++ b/BTM_Qt/res_file.qrc
@@ -7,5 +7,8 @@
         <file>images/background.png</file>
         <file>images/StartMenuBackground.png</file>
         <file>images/BasketballCourt.jpg</file>
+        <file>images/white background image.png</file>
+        <file>images/BasketballCourt1600.png</file>
+        <file>images/StartMenu1600pix.png</file>
     </qresource>
 </RCC>
