--- a/BTM_Qt/startmenu.ui
+++ b/BTM_Qt/startmenu.ui
@@ -455,6 +455,9 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-image: url(:/images/images/BasketballCourt1600.png);</string>
+  </property>
   <widget class="QPushButton" name="Next">
    <property name="geometry">
     <rect>
@@ -463,6 +466,9 @@
      <width>93</width>
      <height>28</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-image: url(:/images/images/white background image.png);</string>
    </property>
    <property name="text">
     <string>Next</string>
@@ -482,6 +488,9 @@
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QLabel" name="name">
+        <property name="styleSheet">
+         <string notr="true">background-image: url(:/images/images/white background image.png);</string>
+        </property>
         <property name="text">
          <string>Your name</string>
         </property>
@@ -489,6 +498,9 @@
       </item>
       <item>
        <widget class="QLabel" name="team">
+        <property name="styleSheet">
+         <string notr="true">background-image: url(:/images/images/white background image.png);</string>
+        </property>
         <property name="text">
          <string>Your team's name</string>
         </property>
@@ -496,6 +508,9 @@
       </item>
       <item>
        <widget class="QLabel" name="nationality">
+        <property name="styleSheet">
+         <string notr="true">background-image: url(:/images/images/white background image.png);</string>
+        </property>
         <property name="text">
          <string>Nationality</string>
         </property>
@@ -506,13 +521,25 @@
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QLineEdit" name="nameInput"/>
+       <widget class="QLineEdit" name="nameInput">
+        <property name="styleSheet">
+         <string notr="true">background-image: url(:/images/images/white background image.png);</string>
+        </property>
+       </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="teamInput"/>
+       <widget class="QLineEdit" name="teamInput">
+        <property name="styleSheet">
+         <string notr="true">background-image: url(:/images/images/white background image.png);</string>
+        </property>
+       </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="nationalityInput"/>
+       <widget class="QLineEdit" name="nationalityInput">
+        <property name="styleSheet">
+         <string notr="true">background-image: url(:/images/images/white background image.png);</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -526,6 +553,9 @@
      <width>471</width>
      <height>231</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-image: url(:/images/images/white background image.png);</string>
    </property>
    <property name="html">
     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
