--- a/BTM_Qt/nextgame.ui
+++ b/BTM_Qt/nextgame.ui
@@ -13,14 +13,26 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog{
+background-color:orange;
+}</string>
+  </property>
   <widget class="QLabel" name="quater">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>230</x>
      <y>140</y>
-     <width>171</width>
-     <height>21</height>
+     <width>471</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel{
+color:rgb(255,255,255);
+background-color:rgb(0,0,0);
+border: 3px solid white;
+}</string>
    </property>
    <property name="text">
     <string>Quarter</string>
@@ -93,13 +105,27 @@
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QLabel" name="away_name">
+        <property name="styleSheet">
+         <string notr="true">QLabel{
+color:rgb(255,255,255);
+background-color:rgb(0,0,0);
+}</string>
+        </property>
         <property name="text">
          <string/>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLCDNumber" name="away_score"/>
+       <widget class="QLCDNumber" name="away_score">
+        <property name="styleSheet">
+         <string notr="true">QLCDNumber{
+color:rgb(0, 0, 255);
+background-color: rgb(0, 0, 0);
+border: 3px solid white;
+}</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -107,6 +133,14 @@
      <widget class="QLabel" name="time">
       <property name="enabled">
        <bool>true</bool>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLabel{
+color:yellow;
+background-color:rgb(0,0,0);
+border: 4px solid white;
+border-radius: 7px;
+}</string>
       </property>
       <property name="text">
        <string>00:00</string>
@@ -117,13 +151,27 @@
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <widget class="QLabel" name="home_name">
+        <property name="styleSheet">
+         <string notr="true">QLabel{
+color:rgb(255,255,255);
+background-color:rgb(0,0,0);
+}</string>
+        </property>
         <property name="text">
          <string/>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLCDNumber" name="home_score"/>
+       <widget class="QLCDNumber" name="home_score">
+        <property name="styleSheet">
+         <string notr="true">QLCDNumber{
+color:rgb(255, 0, 0);
+background-color: rgb(0, 0, 0);
+border: 3px solid white;
+}</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -205,6 +253,22 @@
    </property>
    <property name="text">
     <string>End</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="comments">
+   <property name="geometry">
+    <rect>
+     <x>234</x>
+     <y>235</y>
+     <width>471</width>
+     <height>181</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
