--- a/BTM_Qt/res_file.qrc
+++ b/BTM_Qt/res_file.qrc
@@ -10,5 +10,8 @@
         <file>images/white background image.png</file>
         <file>images/BasketballCourt1600.png</file>
         <file>images/StartMenu1600pix.png</file>
+        <file>images/mainWindowBackBall.jpg</file>
+        <file>images/BallCropedMainWindow</file>
+        <file>images/nextGame2.png</file>
     </qresource>
 </RCC>
